# foundations_deeplearning

./: pyproject.toml
ActivationFunctions/: .gitignore  README.md  main.py
ActivationFunctions/config/: .env  config.py
ActivationFunctions/src/: activationfunctions.py  model.py  preprocessing.py  utils.py
NeuralNetwork/: backpropagation.py  neural_network.py  pyproject.toml
